--- a/locale/en_GB/foreman_kubevirt.po
+++ b/locale/en_GB/foreman_kubevirt.po
@@ -1,21 +1,26 @@
-# English translations for foreman_kubevirt package.
-# Copyright (C) 2020 THE PACKAGE'S COPYRIGHT HOLDER
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the foreman_kubevirt package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+# Translators:
+# Andi Chandler <andi@gowling.com>, 2020
+# 0868a4d1af5275b3f70b0a6dac4c99a4, 2020
+#
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 1.0.0\n"
+"Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2020-05-26 13:16+0530\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: English\n"
-"Language: en_GB\n"
+"PO-Revision-Date: 2020-05-26 07:39+0000\n"
+"Last-Translator: 0868a4d1af5275b3f70b0a6dac4c99a4, 2020\n"
+"Language-Team: English (United Kingdom) (https://www.transifex.com/foreman/tea"
+"ms/114/en_GB/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
-"\n"
+"Language: en_GB\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "%{cpu_cores} Cores and %{memory} memory"
 msgstr ""
@@ -27,7 +32,7 @@ msgid "API port for KubeVirt only"
 msgstr ""
 
 msgid "Actions"
-msgstr ""
+msgstr "Actions"
 
 msgid "Bootable"
 msgstr ""
@@ -39,7 +44,7 @@ msgid "CNI Provider"
 msgstr ""
 
 msgid "CPUs"
-msgstr ""
+msgstr "CPUs"
 
 msgid "Disk"
 msgstr ""
@@ -51,7 +56,7 @@ msgid "Host name for KubeVirt only"
 msgstr ""
 
 msgid "Hostname"
-msgstr ""
+msgstr "Hostname"
 
 msgid "Image"
 msgstr ""
@@ -60,13 +65,13 @@ msgid "It is not possible to set a bootable volume and image based provisioning.
 msgstr ""
 
 msgid "Memory"
-msgstr ""
+msgstr "Memory"
 
 msgid "NIC"
 msgstr ""
 
 msgid "Name"
-msgstr ""
+msgstr "Name"
 
 msgid "Namespace"
 msgstr ""
@@ -75,7 +80,7 @@ msgid "Namespace for KubeVirt only"
 msgstr ""
 
 msgid "Network"
-msgstr ""
+msgstr "Network"
 
 msgid "Only one volume can be bootable"
 msgstr ""
@@ -134,7 +139,7 @@ msgid "Token for KubeVirt only"
 msgstr ""
 
 msgid "Type"
-msgstr ""
+msgstr "Type"
 
 msgid "UUID"
 msgstr ""
