--- a/locale/fr/foreman_kubevirt.po
+++ b/locale/fr/foreman_kubevirt.po
@@ -1,170 +1,178 @@
-# French translations for foreman_kubevirt package.
-# Copyright (C) 2020 THE PACKAGE'S COPYRIGHT HOLDER
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the foreman_kubevirt package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+# Translators:
+# Romain Vrignaud <rvrignaud@gmail.com>, 2020
+# 21966816214bc546c1fc8a185e75ca1c, 2020
+# Claer <transiblu@claer.hammock.fr>, 2020
+# Bryan Kearney <bryan.kearney@gmail.com>, 2020
+# Amit Upadhye <aupadhye@redhat.com>, 2022
+#
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 1.0.0\n"
+"Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2020-05-26 13:16+0530\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: French\n"
-"Language: fr\n"
+"PO-Revision-Date: 2020-05-26 07:39+0000\n"
+"Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2022\n"
+"Language-Team: French (https://www.transifex.com/foreman/teams/114/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n>1;\n"
-"\n"
+"Language: fr\n"
+"Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % 100000"
+"0 == 0 ? 1 : 2;\n"
 
 msgid "%{cpu_cores} Cores and %{memory} memory"
-msgstr ""
+msgstr "%{cpu_cores} Cores et %{memory} mémoire"
 
 msgid "API Port"
-msgstr ""
+msgstr "Port API"
 
 msgid "API port for KubeVirt only"
-msgstr ""
+msgstr "Port API pour KubeVirt uniquement"
 
 msgid "Actions"
-msgstr ""
+msgstr "Actions"
 
 msgid "Bootable"
-msgstr ""
+msgstr "Amorçable"
 
 msgid "CA crt for KubeVirt only"
-msgstr ""
+msgstr "CA crt pour KubeVirt uniquement"
 
 msgid "CNI Provider"
-msgstr ""
+msgstr "Fournisseur CNI"
 
 msgid "CPUs"
-msgstr ""
+msgstr "Processeurs"
 
 msgid "Disk"
-msgstr ""
+msgstr "Disque"
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
-msgstr ""
+msgstr "Cette image prend-t-elle en charge l'entrée de paramètres utilisateur (p.e. via cloud-init) ?"
 
 msgid "Host name for KubeVirt only"
-msgstr ""
+msgstr "Nom d'hôte pour KubeVirt uniquement"
 
 msgid "Hostname"
-msgstr ""
+msgstr "Nom d'hôte"
 
 msgid "Image"
-msgstr ""
+msgstr "Image"
 
 msgid "It is not possible to set a bootable volume and image based provisioning."
-msgstr ""
+msgstr "Il n'est pas possible de définir un volume amorçable et un provisionnement basé sur l'image."
 
 msgid "Memory"
-msgstr ""
+msgstr "Mémoire"
 
 msgid "NIC"
-msgstr ""
+msgstr "NIC"
 
 msgid "Name"
-msgstr ""
+msgstr "Nom"
 
 msgid "Namespace"
-msgstr ""
+msgstr "Espace-nom"
 
 msgid "Namespace for KubeVirt only"
-msgstr ""
+msgstr "Espace de nommage pour KubeVirt uniquement"
 
 msgid "Network"
-msgstr ""
+msgstr "Réseau"
 
 msgid "Only one volume can be bootable"
-msgstr ""
+msgstr "Un seul volume peut être déclaré pour le démarrage"
 
 msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a file. If left blank - insecure."
-msgstr ""
+msgstr "Fournir éventuellement un CA, ou une chaîne de CA correctement ordonnée ou un chemin d'accès à un fichier. Si laissé vide - non sécurisé."
 
 msgid "Password to authenticate with - used for SSH finish step."
-msgstr ""
+msgstr "Mot de passe pour l'authentification SSH lors de l'étape finale."
 
 msgid "Please select an image"
-msgstr ""
+msgstr "Veuillez sélectionner une image"
 
 msgid "Power"
-msgstr ""
+msgstr "Alimentation"
 
 msgid "Power ON this machine"
-msgstr ""
+msgstr "Démarrer cette machine"
 
 msgid "Properties"
-msgstr ""
+msgstr "Propriétés"
 
 msgid "Provision and manage Kubevirt Virtual Machines from Foreman."
-msgstr ""
+msgstr "Fournir et gérer les machines virtuelles Kubevirt de Foreman."
 
 msgid "Running on"
-msgstr ""
+msgstr "Exécution sur"
 
 msgid "Size (GB)"
-msgstr ""
+msgstr "Taille (Go)"
 
 msgid "Start"
-msgstr ""
+msgstr "Démarrer"
 
 msgid "Storage Class"
-msgstr ""
+msgstr "Classe de stockage"
 
 msgid "The compute resource could not be authenticated"
-msgstr ""
+msgstr "La ressource de calcul n'a pas pu être authentifiée"
 
 msgid "The name of the image in the registry."
-msgstr ""
+msgstr "Le nom de l'image dans le registre."
 
 msgid ""
 "The remote system presented a public key signed by an unidentified certificate authority.\n"
 "           If you are sure the remote system is authentic, go to the compute resource edit page, press the 'Test Connection' button and submit"
-msgstr ""
+msgstr "Le système distant a présenté une clé publique signée par une autorité de certification inconnue. Si vous êtes sûr de l'authenticité du système distant, rendez-vous sur la page de modification des ressources de calcul, cliquez sur « Tester la connexion » puis validez."
 
 msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-user, ubuntu, root etc"
-msgstr ""
+msgstr "L'utilisateur qui est utilisé pour se connecter en ssh à l'instance. Normalement cloud-user, ec2-user, ubuntu, root, etc"
 
 msgid "Token"
-msgstr ""
+msgstr "Jeton"
 
 msgid "Token for KubeVirt only"
-msgstr ""
+msgstr "Token pour KubeVirt uniquement"
 
 msgid "Type"
-msgstr ""
+msgstr "Type"
 
 msgid "UUID"
-msgstr ""
+msgstr "UUID"
 
 msgid "VCPU(s)"
-msgstr ""
+msgstr "VCPU(s)"
 
 msgid "VM should be created based on Persistent Volume Claim or Image"
-msgstr ""
+msgstr "La VM doit être créée sur la base d'une demande de volume ou d'une image persistante"
 
 msgid "VM should be created based on an image"
-msgstr ""
+msgstr "La VM doit être créée à partir d'une image"
 
 msgid "X509 Certification Authorities"
-msgstr ""
+msgstr "Autorités de certification X509"
 
 msgid "cni_provider or network are missing"
-msgstr ""
+msgstr "cni_fournisseur ou réseau manquant"
 
 msgid "e.g. eyJhbGciOiJSUzI1NiIsImtpZCI6IiJ9..."
-msgstr ""
+msgstr "par ex. eyJhbGciOiJSUzI1NiIsImtpZCI6IiJ9..."
 
 msgid "genie"
-msgstr ""
+msgstr "genie"
 
 msgid "multus"
-msgstr ""
+msgstr "multus"
 
 msgid "no Storage Classes available on provider"
-msgstr ""
+msgstr "pas de classes de stockage disponibles sur le fournisseur"
 
 msgid "pod"
-msgstr ""
+msgstr "pod"
