--- a/locale/gl/foreman_kubevirt.po
+++ b/locale/gl/foreman_kubevirt.po
@@ -1,21 +1,24 @@
-# Gallegan translations for foreman_kubevirt package.
-# Copyright (C) 2020 THE PACKAGE'S COPYRIGHT HOLDER
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the foreman_kubevirt package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+# Translators:
+# Carmela Rubiños <carmela.rubinos@gmail.com>, 2020
+#
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 1.0.0\n"
+"Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2020-05-26 13:16+0530\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Gallegan\n"
-"Language: gl\n"
+"PO-Revision-Date: 2020-05-26 07:39+0000\n"
+"Last-Translator: Carmela Rubiños <carmela.rubinos@gmail.com>, 2020\n"
+"Language-Team: Galician (https://www.transifex.com/foreman/teams/114/gl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=; plural=;\n"
-"\n"
+"Language: gl\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "%{cpu_cores} Cores and %{memory} memory"
 msgstr ""
@@ -27,10 +30,10 @@ msgid "API port for KubeVirt only"
 msgstr ""
 
 msgid "Actions"
-msgstr ""
+msgstr "Accións"
 
 msgid "Bootable"
-msgstr ""
+msgstr "Arrancable"
 
 msgid "CA crt for KubeVirt only"
 msgstr ""
@@ -39,10 +42,10 @@ msgid "CNI Provider"
 msgstr ""
 
 msgid "CPUs"
-msgstr ""
+msgstr "Procesadores"
 
 msgid "Disk"
-msgstr ""
+msgstr "Disco"
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
 msgstr ""
@@ -54,19 +57,19 @@ msgid "Hostname"
 msgstr ""
 
 msgid "Image"
-msgstr ""
+msgstr "Imaxe"
 
 msgid "It is not possible to set a bootable volume and image based provisioning."
 msgstr ""
 
 msgid "Memory"
-msgstr ""
+msgstr "Memoria"
 
 msgid "NIC"
-msgstr ""
+msgstr "NIC"
 
 msgid "Name"
-msgstr ""
+msgstr "Nome"
 
 msgid "Namespace"
 msgstr ""
@@ -75,7 +78,7 @@ msgid "Namespace for KubeVirt only"
 msgstr ""
 
 msgid "Network"
-msgstr ""
+msgstr "Rede"
 
 msgid "Only one volume can be bootable"
 msgstr ""
@@ -87,25 +90,25 @@ msgid "Password to authenticate with - used for SSH finish step."
 msgstr ""
 
 msgid "Please select an image"
-msgstr ""
+msgstr "Por favor, selecciona unha imaxe"
 
 msgid "Power"
-msgstr ""
+msgstr "Enerxía"
 
 msgid "Power ON this machine"
-msgstr ""
+msgstr "Arranca esta máquina"
 
 msgid "Properties"
-msgstr ""
+msgstr "Propiedades"
 
 msgid "Provision and manage Kubevirt Virtual Machines from Foreman."
 msgstr ""
 
 msgid "Running on"
-msgstr ""
+msgstr "Executándose en"
 
 msgid "Size (GB)"
-msgstr ""
+msgstr "Tamaño (GB)"
 
 msgid "Start"
 msgstr ""
@@ -128,19 +131,19 @@ msgid "The user that is used to ssh into the instance, normally cloud-user, ec2-
 msgstr ""
 
 msgid "Token"
-msgstr ""
+msgstr "Mostra"
 
 msgid "Token for KubeVirt only"
 msgstr ""
 
 msgid "Type"
-msgstr ""
+msgstr "Tipo"
 
 msgid "UUID"
-msgstr ""
+msgstr "UUID"
 
 msgid "VCPU(s)"
-msgstr ""
+msgstr "CPU(s) Virtuais"
 
 msgid "VM should be created based on Persistent Volume Claim or Image"
 msgstr ""
