--- a/locale/zh_CN/foreman_kubevirt.po
+++ b/locale/zh_CN/foreman_kubevirt.po
@@ -7,15 +7,15 @@
 # 0868a4d1af5275b3f70b0a6dac4c99a4, 2020
 # Bryan Kearney <bryan.kearney@gmail.com>, 2020
 # tim123, 2020
-# Amit Upadhye <aupadhye@redhat.com>, 2020
+# Amit Upadhye <aupadhye@redhat.com>, 2022
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: foreman_kubevirt 0.1.7\n"
+"Project-Id-Version: foreman_kubevirt 0.1.9\n"
 "Report-Msgid-Bugs-To: \n"
 "PO-Revision-Date: 2020-05-26 07:39+0000\n"
-"Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2020\n"
+"Last-Translator: Amit Upadhye <aupadhye@redhat.com>, 2022\n"
 "Language-Team: Chinese (China) (https://www.transifex.com/foreman/teams/114/zh"
 "_CN/)\n"
 "MIME-Version: 1.0\n"
@@ -25,7 +25,7 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "%{cpu_cores} Cores and %{memory} memory"
-msgstr "%{cores} 内核及 %{memory} 内存"
+msgstr "%{cpu_cores} 个内核和 %{memory} 内存"
 
 msgid "API Port"
 msgstr "API 端口"
@@ -52,7 +52,7 @@ msgid "Disk"
 msgstr "磁盘"
 
 msgid "Does this image support user data input (e.g. via cloud-init)?"
-msgstr "这个映像是否支持用户数据输入（例如：通过 cloud-init）？"
+msgstr "这个镜像是否支持用户数据输入（例如：通过 cloud-init）？"
 
 msgid "Host name for KubeVirt only"
 msgstr "仅限 KubeVirt 的主机名"
@@ -61,7 +61,7 @@ msgid "Hostname"
 msgstr "主机名"
 
 msgid "Image"
-msgstr "图片"
+msgstr "镜像"
 
 msgid "It is not possible to set a bootable volume and image based provisioning."
 msgstr "无法基于置备设置引导卷和镜像。"
@@ -91,10 +91,10 @@ msgid "Optionally provide a CA, or a correctly ordered CA chain or a path to a f
 msgstr "（可选）提供一个 CA，或正确排序的 CA 链，或文件的路径。如果留为空白-不安全。"
 
 msgid "Password to authenticate with - used for SSH finish step."
-msgstr "用來進行認證的密碼 - 用於 SSH 完成步驟。"
+msgstr "进行验证的密码 - 用于 SSH 完成步骤。"
 
 msgid "Please select an image"
-msgstr "请选择介质"
+msgstr "请选择一个镜像"
 
 msgid "Power"
 msgstr "电源"
